--- a/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-end text-small">
                                         <li><a class="dropdown-item" href="/Views/Usuario/Equipo?id=@id">Mis Pokemones</a></li>
-                                        <li><a class="dropdown-item" href="/Views/Usuario/Chat?id=@id">Chats</a></li>
+                                        <li><a class="dropdown-item" href="/Views/Usuario/Contactos?id=@id">Contactos</a></li>
                                         <li><a class="dropdown-item" href="#">Perfil</a></li>
                                         <li>
                                             <hr class="dropdown-divider">
