--- a/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Contactos.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Contactos.cshtml
@@ -5,9 +5,14 @@
 
 <div class="row text-center mb-2">
     <h1>Mis Contactos</h1>
+    <div class="d-flex justify-content-end">
+        <button class="button-blue py-2 mb-3">
+            <a href="/Views/Usuario/AgregarContacto" type="button" class="text-white text-decoration-none"><i class="fas fa-plus"></i></a>
+        </button>
+    </div>
 </div>
 <div class="row justify-content-center">
-    
+
     <div class="col-6 p-3">
         <div class="chat-list align-items-start text-start">
             <div class="list-group" id="contactList">
