--- a/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
@@ -89,7 +89,11 @@
                                         <li>
                                             <hr class="dropdown-divider">
                                         </li>
-                                        <li><a class="dropdown-item" href="#">Salir</a></li>
+                                        <li>
+                                            <form method="post" asp-page="/Logout">
+                                                <button type="submit" class="dropdown-item">Salir</button>
+                                            </form>
+                                        </li>
                                     </ul>
                                 </li>
                             }
