--- a/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Editar.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Editar.cshtml
@@ -17,15 +17,23 @@
                 <input type="number" class="form-control" id="id_usuario" name="id_usuario" required readonly hidden value="@Model.Usuario.nombre">
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="adminCheck" name="Admin" value="true">
-                <label class="form-check-label" for="adminCheck">
+                @if(Model.Admin){
+                    <input class="form-check-input" type="checkbox" id="adminCheck" name="Admin" value="true" checked>
+                }else{
+                    <input class="form-check-input" type="checkbox" id="adminCheck" name="Admin" value="true">
+                }
+                <label class="form-check-label ps-2" for="adminCheck">
                     Administrador
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="enfermeroCheck" name="Enfermero" value="true">
-                <label class="form-check-label" for="enfermeroCheck">
-                    Enfermero
+                @if (Model.Enfermero) {
+                    <input class="form-check-input" type="checkbox" id="enfermeroCheck" name="Enfermero" value="true" checked>
+                }else{
+                    <input class="form-check-input" type="checkbox" id="enfermeroCheck" name="Enfermero" value="true">
+                }
+                <label class="form-check-label ps-2" for="enfermeroCheck">
+                      Enfermero
                 </label>
             </div>
             <div class="d-flex justify-content-end">
